<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
     >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        
        <TextView
            android:id="@+id/mac_info_num" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/little_font_color"
            android:layout_marginLeft="20dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"
            android:textColor="@color/font_color"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/normal_font"/>
        
        <TextView
            android:id="@+id/phone_num" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13545568965"
            android:textColor="@color/font_color"
            android:textSize="@dimen/normal_font"/>
        
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp">
            
            <TextView
            android:id="@+id/mac" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="aa:bb:cc:dd"
            android:textColor="@color/font_color"
            android:textSize="@dimen/normal_font"
            android:layout_alignParentRight="true"
            />
            
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac"
            android:textColor="@color/font_color"
            android:textSize="@dimen/normal_font"
            android:layout_toLeftOf="@id/mac"/>
        </RelativeLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid"
            android:textColor="@color/font_color"
            android:layout_marginLeft="37dp"
            android:textSize="@dimen/normal_font"/>
        
        <TextView
            android:id="@+id/ssid" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hintsoft_guest"
            android:textColor="@color/font_color"
            android:textSize="@dimen/normal_font"/>
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>
